--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>galvanize-reads1eads</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#/">
+          <img src="img/BookLogo.png" alt="Galvanize Reads Logo">
+        </a>
+      </div>
+      <a href="#/" class="navbar-text">gReads</a>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row">
+
+      <div class="col-md-2 sidebar">
+        <div class="affix" data-spy="affix" data-offset-top="70">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="text-center">Authors</p>
+              <img class="center-block" width="50" height="50" src="img/authors.png" alt="Authors Logo">
+            </div>
+            <div class="panel_body">
+              <a href="#/authors" class="btn btn-primary btn-block">View all Authors</a>
+              <a href="#/author/add/new" class="btn btn-primary btn-block">Add an Author</a>
+            </div>
+          </div>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="text-center">Books</p>
+              <img class="center-block" width="50" height="50" src="img/books.png" alt="Books Logo">
+            </div>
+            <div class="panel_body">
+              <a href="#/books" class="btn btn-primary btn-block">View all Books</a>
+              <a href="#/book/add/new" class="btn btn-primary btn-block">Add a Book</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- <script src="/javascripts"></script> -->
+</body>
+<footer class="page-footer" id="footer">
+  <div class="container">
+    <div class="footer-link"><a href="/">Galvanize Reads</a></div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      © 2016 threequarterR
+    </div>
+  </div>
+</footer>
+
 </html>
